Upgrade to final bootstrap 4, style cleanups

--- a/feedback/locale/fi/LC_MESSAGES/django.po
+++ b/feedback/locale/fi/LC_MESSAGES/django.po
@@ -101,4 +101,4 @@ msgstr "Kiitos palautteestasi!"
 
 #: templates/minimal.html:8
 msgid "Helsinki feedback"
-msgstr "Helsinki&#45;palaute"
+msgstr "Helsinki-palaute"
